--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<main>
 		<h2>About Me</h2>
-		<p>Hi, I'm [your name]. I'm a [your profession] based in [your location]. In my free time, I enjoy [your hobbies or interests].</p>
+		<p>Hi, I'm Nikhil Mathur. I'm a living W based in W land. In my free time, being better.</p>
 	</main>
 
 	<footer>
